# midl_compiler

./: README.md
cpp/: CMakeLists.txt  messages.hh  messages.yml  midl_compiler.cpp  midl_compiler_tests.cc
python/: README.md  messages.hh  messages.yml  midl_compiler.py
